see #217 warn if change of meter is within a measure

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -396,6 +396,7 @@
     "MM_PER_POINT": "MM pro point",
     "Mode": "Modus",
     "more than one line found for ": "Mehr als eine Zeile gefunden für ",
+    "Meter change not at beginning of measure": "Taktänderung mitten im Takt",
     "Multiple parts for same note": "Mehrere Part-Angaben [P:] für eine Note",
     "Multiple remarks for same note": "Mehrere Verschiebemarken [r: ]für eine Note",
     "Name of annotation": "Name der Beschriftungsvorlage",
