see #253 add menu „reset template“

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -384,6 +384,7 @@
     "repeatsigns": "Wiederholungszeichen",
     "repeatsigns.full": "Wiederholugnszeichen.detail",
     "repeatstart": "Wiederholungsanfang",
+    "resettemplate": "Vorlage zurücksetzen",
     "resources": "Resourcen",
     "REST_SIZE": "Pausengröße",
     "REST_TO_GLYPH": "Pausensymbole",
