--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -490,6 +490,7 @@
     "repeatsigns": "Wiederholungszeichen",
     "repeatsigns.full": "Wiederholugnszeichen.detail",
     "repeatstart": "Wiederholungsanfang",
+    "resettemplate": "Vorlage zurücksetzen",
     "resources": "Resourcen",
     "REST_SIZE": "Pausengröße",
     "REST_TO_GLYPH": "Pausensymbole",
