see #253 finalise template handling
* move everything to statusbar menu
* add make template
* update manual
* update localisation

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -171,6 +171,7 @@
     "annotations": "Notenbeschriftungsvorlagen",
     "apanchor": "autom. pos. Anker",
     "apbase": "autom. pos. Basis",
+    "apply settings from template": "Konfiguration aus  Vorlage anwenden",
     "Auto Refresh": "Auto-Rendern ",
     "Auto Render off": "Auto-Rendern off",
     "Auto Render on ": "Auto-Rendern on",
@@ -277,6 +278,7 @@
     "edit settings for lyrics\nin current extract": "Einstellungen für Liedtexte bearbeiten\nim aktuellen Auszug",
     "edit settings for sheet annotations\nin current extract": "Einstellungen für Seitenbeschriftung bearbeiten",
     "edit shape of repeat signs": "Darstellung der Wiederholungszeichen bearbeiten",
+    "edit template configuration": "Konfiguration für Dateivorlage bearbeiten",
     "edit Template properties": "Eigenschaften der Dateivorlage bearbeiten",
     "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
     "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
@@ -372,6 +374,8 @@
     "LINE_THICK": "Linienstärke dick",
     "LINE_THIN": "Linienstärke dünn",
     "llpos": "unten links",
+    "load and apply template from dropbox": "Vorlage aus Dropbox laden und anwenden",
+    "load template from dropbox": "Dateivorlage aus Dropbx laden",
     "locales loaded": "Sprachdaten geladen",
     "logged out from dropbox": "Du hast dich aus Dropbox ausgeloggt",
     "logged out": "ausgeloggt",
@@ -384,11 +388,14 @@
     "Logout from Dropbox": "bei Dropbox ausloggen",
     "Logout": "Ausloggen",
     "lyrics": "Liedtexte",
+    "make tmmplate from current piece": "neue Vorlage erstellen",
+    "maketemplate": "Vorlage erstellen",
     "Manual": "Benutzerhandbuch",
     "manual_sheet": "Manuelle Vorlage",
     "marks": "Saitenmarken",
     "medium view\nmost commonly used\nautoscroll works": "normale Größe\nmeistgenutzte Darstellunge\nautmatisches Scrollen\nfunktioniert",
     "medium": "normal",
+    "Meter change not at beginning of measure": "Taktänderung mitten im Takt",
     "minc": "extra Vorschub",
     "minc_f": "Faktor",
     "missing pos": "Positionsangabe fehlt",
@@ -396,7 +403,6 @@
     "MM_PER_POINT": "MM pro point",
     "Mode": "Modus",
     "more than one line found for ": "Mehr als eine Zeile gefunden für ",
-    "Meter change not at beginning of measure": "Taktänderung mitten im Takt",
     "Multiple parts for same note": "Mehrere Part-Angaben [P:] für eine Note",
     "Multiple remarks for same note": "Mehrere Verschiebemarken [r: ]für eine Note",
     "Name of annotation": "Name der Beschriftungsvorlage",
@@ -490,6 +496,7 @@
     "repeatsigns": "Wiederholungszeichen",
     "repeatsigns.full": "Wiederholugnszeichen.detail",
     "repeatstart": "Wiederholungsanfang",
+    "reset template to Zupfnoter defalts": "Vorlage auf Zupfnoter-Voreinstellung zurücksetzen",
     "resettemplate": "Vorlage zurücksetzen",
     "resources": "Resourcen",
     "REST_SIZE": "Pausengröße",
@@ -549,7 +556,7 @@
     "specify which voides\nare considered to compute \nvertical spacing": "Angabe, welche Stimmen\nzur Berechnung\nder vertikalen Notenanordnung\nberücksihtigt werden",
     "spos": "Pos. Subleg.",
     "startpos": "Startposition",
-    "stdextract": "Standardauszüge aus Vorlage übernehmen",
+    "stdextract": "Auszüge aus Vorlage übernehmen",
     "Stop": "Stop",
     "stringnames": "Saitennamen",
     "Stringnames": "Saitennamen",
