--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -63,9 +63,11 @@
     "annotations": "Notenbeschriftungsvorlagen",
     "apanchor": "autom. pos. Anker",
     "apbase": "autom. pos. Basis",
+    "apply settings from template": "Konfiguration aus  Vorlage anwenden",
     "Auto Refresh": "Auto-Rendern ",
     "Auto Render off": "Auto-Rendern off",
     "Auto Render on ": "Auto-Rendern on",
+    "Auto Render": "Auto Render",
     "Auto-Render ": "Auto-Rendern ",
     "autopos": "autom. pos.",
     "autoscroll": "zur Selektion scrollen",
@@ -86,9 +88,10 @@
     "bold": "fettdruck",
     "bottomup": "Spiel aufwärts",
     "BUG: error while initializing Zupfnoter Controller": "BUG: Fehler beim initialisieren. Bitte informiere Zupfpnoter-Entwicklung",
-    "BUG: worker did not finsh": "**Fehler: Hintergrundberechnung nicht richtig beendet",
+    "BUG: worker did not finsh": "Fehler: Hintergrundberechnung nicht richtig beendet",
     "c_jumplines": "Sprunglinien",
     "CAUTION: your abc-code is vulnerable !!! removed beginjs / endjs": "ACHTUNG:: dein ABC-Code enthält ggf. Schadcode. beginjs / endjs entfernt",
+    "choose drobox path": "Speicherort auswählen",
     "Choose extract": "Auszug wählen",
     "color": "Farbeinstellung",
     "color_default": "Sonstiges",
@@ -167,6 +170,7 @@
     "edit settings for lyrics\nin current extract": "Einstellungen für Liedtexte bearbeiten\nim aktuellen Auszug",
     "edit settings for sheet annotations\nin current extract": "Einstellungen für Seitenbeschriftung bearbeiten",
     "edit shape of repeat signs": "Darstellung der Wiederholungszeichen bearbeiten",
+    "edit template configuration": "Konfiguration für Dateivorlage bearbeiten",
     "edit Template properties": "Eigenschaften der Dateivorlage bearbeiten",
     "Edit": "Bearbeiten",
     "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
@@ -263,6 +267,8 @@
     "LINE_THICK": "Linienstärke dick",
     "LINE_THIN": "Linienstärke dünn",
     "llpos": "unten links",
+    "load and apply template from dropbox": "Vorlage aus Dropbox laden und anwenden",
+    "load template from dropbox": "Dateivorlage aus Dropbx laden",
     "locales loaded": "Sprachdaten geladen",
     "logged out from dropbox": "Du hast dich aus Dropbox ausgeloggt",
     "logged out": "ausgeloggt",
@@ -275,11 +281,14 @@
     "Logout from Dropbox": "bei Dropbox ausloggen",
     "Logout": "Ausloggen",
     "lyrics": "Liedtexte",
+    "make tmmplate from current piece": "neue Vorlage erstellen",
+    "maketemplate": "Vorlage erstellen",
     "Manual": "Benutzerhandbuch",
     "manual_sheet": "Manuelle Vorlage",
     "marks": "Saitenmarken",
     "medium view\nmost commonly used\nautoscroll works": "normale Größe\nmeistgenutzte Darstellunge\nautmatisches Scrollen\nfunktioniert",
     "medium": "normal",
+    "Meter change not at beginning of measure": "Taktänderung mitten im Takt",
     "minc": "extra Vorschub",
     "minc_f": "Faktor",
     "missing pos": "Positionsangabe fehlt",
@@ -300,9 +309,10 @@
     "new": "Neu",
     "No access token to revoke": "Kein Zugriffstoken vorhanden, das gelöscht werden kann.",
     "no filebase given for template. Please type  ": "**--no filebase given for template. Please type  ",
-    "no placeholder value found in ": "kein Platzhalter gefunden in ",
+    "no placeholder value found in ": "kein Wert für Platzhalter gefunden in ",
     "no preview available yet": "Noch keine Vorschau verfügbar",
     "no suitable ABC found": "keine passende ABC Eingabe gefunden",
+    "no template found": "keine Vorlage gefunden",
     "nonflowrest": "Begleitpausen",
     "notebound annotation": "Notenbezogene Beschriftung",
     "notebound": "Notenbezogen",
@@ -380,6 +390,8 @@
     "repeatsigns": "Wiederholungszeichen",
     "repeatsigns.full": "Wiederholugnszeichen.detail",
     "repeatstart": "Wiederholungsanfang",
+    "reset template to Zupfnoter defalts": "Vorlage auf Zupfnoter-Voreinstellung zurücksetzen",
+    "resettemplate": "Vorlage zurücksetzen",
     "resources": "Resourcen",
     "REST_SIZE": "Pausengröße",
     "REST_TO_GLYPH": "Pausensymbole",
@@ -390,6 +402,7 @@
     "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
     "Save": "Speichern",
     "saveformat": "Seitenformat für pdf",
+    "search": "Suche",
     "Select in all voices": "Abschnitt in allen Stimmen auswählen",
     "select the current notes in all voices": "selektierten Zeitraum in allen Stimmen selektieren",
     "set screen perspective": "Bildschirmansicht wählen",
@@ -438,7 +451,7 @@
     "specify which voides\nare considered to compute \nvertical spacing": "Angabe, welche Stimmen\nzur Berechnung\nder vertikalen Notenanordnung\nberücksihtigt werden",
     "spos": "Pos. Subleg.",
     "startpos": "Startposition",
-    "stdextract": "Standardauszüge aus Vorlage übernehmen",
+    "stdextract": "Auszüge aus Vorlage übernehmen",
     "Stop": "Stop",
     "stringnames": "Saitennamen",
     "Stringnames": "Saitennamen",
@@ -489,10 +502,11 @@
     "Videos": "Videos",
     "vl": "'V' links",
     "voices": "Stimmen",
-    "vpos": "vertikale Position",
+    "vpos": "vert. Position",
     "vr": "'V' rechts",
     "vt": "'V' oben",
     "wait for Dropbox authentication": "Warte auf  Dropbox authentication",
+    "wildcard": "Joker",
     "wrap": "wrap",
     "wrong placeholder: ": "Fehlerhafter Platzhalter: ",
     "X-position": "X-Position",
@@ -508,11 +522,11 @@
     "you have multiple %%score statements": "Du hast mehr als eine %%score Zeile",
     "you need to logout if you want to change the application scope": "Du musst dich abmelden um den Zugriffstyp zu ändern",
     "your cursor is not within a voice": "dein Cursor steht nicht in einer Stimme. Daher kann die Selektion nicht auf andere Stimmen übertragen werden",
+    "Zipino": "Zipino",
     "Zombie Accesstoken revoked; do not use Browser back after login to dropbox": "Zombie Zugriffstoken gelöscht. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
     "Zupfnoter": "Zupfnoter",
-
 
 
     "_ende_der_liste": ""
