Do not limit number of extracts #269
also refactored userinterface.js

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -254,6 +254,7 @@
     "Draggable": "Verschiebemarke",
     "DRAWING_AREA_SIZE": "Zeichenfl.Größe",
     "Dropbox": "Dropbox",
+    "duplicate filenameparts": "Filename-Zusatz ist nicht eindeutig",
     "DURATION_TO_BEAMS": "Notenstile mit Hälsen",
     "DURATION_TO_STYLE": "Notenstile",
     "Edit addon on cursor position": "Zusatzinformation bearbeiten",
@@ -304,6 +305,7 @@
     "Extract": "Auszug",
     "extract": "Auszug",
     "Extract-Annotation": "Auszugsbeschriftung",
+    "extracts": "Auszüge",
     "Extras": "Extras",
     "File": "Datei",
     "filebase": "Filename-Basis",
@@ -479,7 +481,7 @@
     "printer_left": "Druck nach links schieben",
     "printer_right": "Druck nach rechts schieben",
     "Private copy": "Privatkopie",
-    "produce": "Auszüge",
+    "produce": "PDF für Auszüge",
     "provided by\n": "zu beziehen bei\n",
     "push to extract 0": "nach Auszug 0 schieben",
     "Quick Setting": "Schnelleinst.",
