now support open jumpiness #272
first step

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -358,6 +358,9 @@
     "jumpline_anchor_close": "Sprungl.Anker nah",
     "jumpline_anchor_medium": "Sprungl.Anker mittel",
     "jumpline_anchor_wide": "Sprungl.Anker weit",
+    "jumpline_close": "Sprunglinien geschlossen",
+    "jumpline_open": "Sprunglinien offen",
+    "jumpline_vcut": "Sprungl.vert.länge",
     "jumplines": "Sprunglinien",
     "jumptarget": "Sprungziel",
     "Jumptarget": "Sprungziel",
