see #272 refactoring of unisons

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -501,6 +501,10 @@
     "repeatsigns": "Wiederholungszeichen",
     "repeatsigns.full": "Wiederholugnszeichen.detail",
     "repeatstart": "Wiederholungsanfang",
+    "Replace all unisons in the selection by the first note": "Ersetze Mehrklänge durch deren erste Noten",
+    "Replace all unisons in the selection by the last note": "Ersetze Mehrklänge durch deren letzte note",
+    "Replace unison by first note": "Mehrklang zu erster Note",
+    "Replace unison by last note": "Mehrklang zu letzter Note",
     "reset template to Zupfnoter defalts": "Vorlage auf Zupfnoter-Voreinstellung zurücksetzen",
     "resettemplate": "Vorlage zurücksetzen",
     "resources": "Resourcen",
@@ -515,6 +519,7 @@
     "search": "Suche",
     "Select in all voices": "Abschnitt in allen Stimmen auswählen",
     "select the current notes in all voices": "selektierten Zeitraum in allen Stimmen selektieren",
+    "Selection is empty": "Selektion ist leer. Du muss einen Bereich auswählen!",
     "set screen perspective": "Bildschirmansicht wählen",
     "settemplate": "Vorlage aktivieren",
     "settings for specific instrument sizes": "Instrument spezifischen Einstellungen",
@@ -568,6 +573,8 @@
     "stringnames.full": "Saitennamen.detail",
     "style": "Stil",
     "subflowlines": "Hilfsmelodielinien",
+    "Swap first and last note of all unisons in the selection": "Tausche erste und letzte Note in Merkängen",
+    "Swap fist and last note in unison": "Noten in Mehrklang tauschen",
     "synchlines": "Synchronisationslinien",
     "T01_number": "T01 Nummer",
     "T01_number_extract": "T01 Auszug-Nummer",
