--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -205,11 +205,7 @@
 \hyphenation{Zupf-noter}
 \hyphenation{Fen-ster}
 
-<<<<<<< HEAD
-Version v\_1.11.2-22-g3930171e
-=======
-Version v\_1.11.2-17-ga8ec3f5e
->>>>>>> see #274 now made it work with opal 1.0
+Version v\_1.11.2-26-g1e91fd76
 
 \begin{verbatim}
 © 2019 https://www.zupfnoter.de
