--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -205,7 +205,7 @@
 \hyphenation{Zupf-noter}
 \hyphenation{Fen-ster}
 
-Version v\_1.11.2-37-gb98f4d37
+Version v\_1.11.2-39-gce5bd46f
 
 \begin{verbatim}
 © 2019 https://www.zupfnoter.de
