--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -205,7 +205,7 @@
 \hyphenation{Zupf-noter}
 \hyphenation{Fen-ster}
 
-Version v\_1.11.2-41-g5aa4eadd
+Version v\_1.11.2-43-g9f334e8e
 
 \begin{verbatim}
 © 2019 https://www.zupfnoter.de
